--- a/src/app/tours/Tours.css
+++ b/src/app/tours/Tours.css
@@ -25,4 +25,24 @@ section.tours-header h2 {
     .tours .tours-list .tour-container {
         min-width: 95% !important;
     }
+
+    .tours .tours-list.tour-container-1 .tour-container {
+        right: 0px;
+    }
+
+    .tours .tours-list.tour-container-2 .tour-container {
+        right: 355px;
+    }
+
+    .tours .tours-list.tour-container-3 .tour-container {
+        right: 720px;
+    }
+
+    .tours .tours-list.tour-container-4 .tour-container {
+        right: 1085px;
+    }
+
+    .tours .tours-list.tour-container-5 .tour-container {
+        right: 1440px;
+    }
 }
