working swipe functionality

--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -622,3 +622,15 @@ h2.getting-there {
         padding: 0;
     }
 }
+
+.swipe-box {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+}
+
+.inner-box {
+    width: 50%;
+    height: 100%;
+}
