--- a/src/app/(components)/(Navbar)/Navbar.css
+++ b/src/app/(components)/(Navbar)/Navbar.css
@@ -7,6 +7,12 @@ nav {
     box-shadow: 0px 5px 15px #00000061;
 }
 
+.bison-icon {
+    width: 30px;
+    height: 20px;
+    transition: .5s;
+}
+
 img.logo {
     width: auto;
     max-width: 100%;
