--- a/src/app/tickets/Tickets.css
+++ b/src/app/tickets/Tickets.css
@@ -8,9 +8,9 @@ section.tickets-header h2 {
     font-size: 30px;
 }
 
-.tickets .tour-container {
+/* .tickets .tour-container {
     min-width: 25%;
-}
+} */
 
 .tickets .tours-list {
     width: 100vw;
