--- a/src/app/tours/Tours.css
+++ b/src/app/tours/Tours.css
@@ -12,9 +12,9 @@ section.tours-header h2 {
     width: 80%;
 }
 
-.tours .tour-container {
+/* .tours .tour-container {
     min-width: 25%;
-}
+} */
 
 .tours .tours-list {
     width: 100vw;
