--- a/src/app/contact-us/internship-application/InternshipApplication.css
+++ b/src/app/contact-us/internship-application/InternshipApplication.css
@@ -6,7 +6,9 @@
 }
 
 section.internship-application-header h2 {
-    font-size: 30px;
+    font-size: 40px;
+    color: white;
+    text-transform: uppercase;
 }
 
 .internship-application-description {
