--- a/src/app/contact-us/job-application/JobApplication.css
+++ b/src/app/contact-us/job-application/JobApplication.css
@@ -5,7 +5,9 @@
 }
 
 section.job-application-header h2 {
-    font-size: 30px;
+    font-size: 40px;
+    color: white;
+    text-transform: uppercase;
 }
 
 .job-application-description {
