--- a/src/app/contact-us/lets-connect/LetsConnect.css
+++ b/src/app/contact-us/lets-connect/LetsConnect.css
@@ -5,7 +5,9 @@
 }
 
 section.lets-connect-header h2 {
-    font-size: 30px;
+    font-size: 40px;
+    color: white;
+    text-transform: uppercase;
 }
 
 .lets-connect-description {
