--- a/src/app/about/About.css
+++ b/src/app/about/About.css
@@ -1,22 +1,32 @@
 .about-header {
-    padding: 4em;
+    padding: 2em;
     width: 130%;
 }
 
 section.about h2 {
-    font-size: 30px;
+    color: white;
+    text-transform: uppercase;
 }
 
 .our-team-header {
     background-color: var(--secondary-color);
+    font-size: 30px;
+    color: white;
+    text-transform: uppercase;
 }
 
 .our-story-header {
     background-color: var(--primary-color);
+    font-size: 30px;
+    color: white;
+    text-transform: uppercase;
 }
 
 .education-header {
     background-color: var(--fourth-color);
+    font-size: 30px;
+    color: white;
+    text-transform: uppercase;
 }
 
 .our-animals-header {
@@ -27,6 +37,8 @@ section.about h2 {
     justify-content: center;
     align-items: center;
     gap: 10px;
+    font-size: 30px;
+    text-transform: uppercase;
 }
 
 .about-body {
