--- a/src/app/contact-us/volunteer-application/VolunteerApplication.css
+++ b/src/app/contact-us/volunteer-application/VolunteerApplication.css
@@ -5,7 +5,9 @@
 }
 
 section.volunteer-application-header h2 {
-    font-size: 30px;
+    font-size: 40px;
+    color: white;
+    text-transform: uppercase;
 }
 
 .volunteer-application-description {
