--- a/src/app/events/Events.css
+++ b/src/app/events/Events.css
@@ -5,7 +5,9 @@
 }
 
 section.events-header h2 {
-    font-size: 30px;
+    font-size: 40px;
+    color: white;
+    text-transform: uppercase;
 }
 
 .events-img {
