--- a/src/app/(components)/(PrimaryButton)/PrimaryButton.css
+++ b/src/app/(components)/(PrimaryButton)/PrimaryButton.css
@@ -8,3 +8,9 @@ a.primary-button {
     text-transform: uppercase;
     font-weight: 600;
 }
+
+@media screen and (max-width: 1200px) {
+    a.primary-button {
+        font-size: 14px;
+    }
+}
