--- a/src/app/(components)/Modal/Modal.css
+++ b/src/app/(components)/Modal/Modal.css
@@ -19,10 +19,12 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    max-width: 400px;
+    max-width: 700px;
     width: 100%;
     flex-direction: column;
     gap: 30px;
+    max-height: 800px;
+    height: 100%;
 }
 
 .modal-close-button {
@@ -38,4 +40,10 @@
 .modal-option {
     flex-direction: column;
     gap: 10px;
+}
+
+@media screen and (max-width: 1200px) {
+    .modal {
+        max-height: 400px;
+    }
 }
