--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -17,7 +17,7 @@
 }
 
 .home-component-1.background-2 {
-    background: url("../../(assets)/reptile-weekend-home.png");
+    background: url("../../(assets)/backpack-for-kids.png");
 }
 
 .home-component-1.background-2 .container {
