teachers enter for free

--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -198,6 +198,10 @@
     background: var(--fourth-color);
 }
 
+.tour-button.blue a {
+    background: #13c1ea;
+}
+
 /* .tour-button button {
     width: 100%;
     height: 60px;
