--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -202,6 +202,10 @@
     background: #13c1ea;
 }
 
+.tour-button.blue button {
+    background: #13c1ea;
+}
+
 /* .tour-button button {
     width: 100%;
     height: 60px;
