--- a/src/app/about/About.css
+++ b/src/app/about/About.css
@@ -83,8 +83,7 @@ p.animal-name {
 }
 
 .animal-img {
-    width: 100%;
-    height: 200px;
+    max-width: 90vw;
     filter: brightness(0.9);
     transition: .5s;
     border-radius: 15px;
