--- a/src/app/(components)/Modal/Modal.css
+++ b/src/app/(components)/Modal/Modal.css
@@ -18,9 +18,8 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     max-width: 700px;
-    width: 100%;
     flex-direction: column;
     gap: 30px;
     max-height: 800px;
