replaced kids enter free with new one

--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -17,7 +17,7 @@
 }
 
 .home-component-1.background-2 {
-    background: url("../../(assets)/labor-day-weekend-home.png");
+    background: url("../../(assets)/kids-enter-free-home.png");
 }
 
 .home-component-1.background-2 .container {
