--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -12,13 +12,13 @@
     transition: .5s;
 }
 
-.home-component-1.background-1 {
+/* .home-component-1.background-1 {
     background: url("../../(assets)/splash-background.png");
 }
 
 .home-component-1.background-2 {
     background: url("../../(assets)/kids-enter-free-home.png");
-}
+} */
 
 .home-component-1.background-2 .container {
     display: none;
