added button modal

--- a/src/app/(components)/Modal/Modal.css
+++ b/src/app/(components)/Modal/Modal.css
@@ -17,7 +17,7 @@
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     max-width: 700px;
     flex-direction: column;
