--- a/src/app/(components)/HiddenModal/HiddenModal.css
+++ b/src/app/(components)/HiddenModal/HiddenModal.css
@@ -1,5 +1,22 @@
 .modal img {
     width: 100%;
-    height: 100%;
+    height: 90%;
     border-radius: 8px;
+}
+
+.modal a {
+    width: calc(202px*0.8);
+    height: calc(60px*0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    text-transform: uppercase;
+    font-weight: 600;
+    flex-direction: column;
+    border-radius: 50px;
+    color: white;
+    box-shadow: #0000003d 0px 5px;
+    border: none;
+    background: var(--secondary-color);
 }
